test/type/wrong/hr7.kk.out
test/type/wrong/hr7.kk(4,47): error: types do not match (due to an infinite type)
 context : (throw("hi") : some<a> list<a -> a> -> ... d -> c) -> c>)
 term : ... d -> c) -> c>
 inferred type: list<(forall<b> (b) -> _a) -> _a>
 expected type: list<(_a) -> _a>
 hint : give a type to the function definition?